--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -5,34 +5,25 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum
-    name: Uni
-    network: mainnet
+    name: UsdcContract
+    network: base
     source:
-      address: "0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984"
-      abi: Uni
-      startBlock: 10861674
+      address: "0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913"
+      abi: UsdcContract
+      startBlock: 16515100
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - Approval
-        - DelegateChanged
-        - DelegateVotesChanged
-        - MinterChanged
-        - Transfer
+        - AdminChanged
+        - Upgraded
       abis:
-        - name: Uni
-          file: ./abis/Uni.json
+        - name: UsdcContract
+          file: ./abis/UsdcContract.json
       eventHandlers:
-        - event: Approval(indexed address,indexed address,uint256)
-          handler: handleApproval
-        - event: DelegateChanged(indexed address,indexed address,indexed address)
-          handler: handleDelegateChanged
-        - event: DelegateVotesChanged(indexed address,uint256,uint256)
-          handler: handleDelegateVotesChanged
-        - event: MinterChanged(address,address)
-          handler: handleMinterChanged
-        - event: Transfer(indexed address,indexed address,uint256)
-          handler: handleTransfer
-      file: ./src/uni.ts
+        - event: AdminChanged(address,address)
+          handler: handleAdminChanged
+        - event: Upgraded(address)
+          handler: handleUpgraded
+      file: ./src/usdc-contract.ts
